[package]
name = "cloudflare-workers"
version = "0.1.0"
authors = ["Alan Kemp <alan@alankemp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"] }
js-sys = "0.3.44"
serde = "1.0.115"
serde_derive = "1.0.115"

[dependencies.web-sys]
version = "*"
features = [
  'FetchEvent',
  'FormData',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'ResponseInit',
  'Response',
]

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
